# repitis-backend

./: .gitignore  AUDIO_GENERATION.md  DATABASE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20251008_1438_a7b6c625f10d_initial_schema_with_uuid.py  20251014_1939_a777489ed07f_add_fsrs_data_jsonb_column_to_review_.py  20251017_0055_b8c9d736e21f_add_highest_stability_and_mastered_at.py
app/: __init__.py  auth.py  config.py  database.py  main.py
app/models/: __init__.py  card.py  card_progress.py  level.py  profile.py  review_log.py
app/routes/: __init__.py  cards.py  levels.py  stats.py
app/schemas/: __init__.py  card.py  level.py  review.py  stats.py
app/services/: __init__.py  cards.py  fsrs.py  stats.py
scripts/: backfill_mastery_data.py  check_card_urls.py  generate_and_update_audio.py  reset_user_progress.py  seed_cards.py  seed_levels.py  setup_supabase_auth.sql  upload_audio.py
